.deployment/base/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: site-strooware

spec:
  template:
    spec:
      containers:
        - name: site-strooware
          image: docker.io/strootje/strooware:main
          imagePullPolicy: IfNotPresent
          ports:
            - { name: http, containerPort: 80, protocol: TCP }
      serviceAccountName: strooware
  revisionHistoryLimit: 1
  replicas: 1
