.deployment/base/service.yml
apiVersion: v1
kind: Service

metadata:
  name: website-strooware

spec:
  type: ClusterIP

  ports:
    - name: http
      targetPort: http
      protocol: TCP
      port: 80
